crates/swc_ecma_parser/tests/test262-error-references/fail/1004b5fec18f14ec.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/1004b5fec18f14ec.js:1:11
  |
1 | 1 + { t:t,
  |           ^

